package net.civeira.phylax.features.access.userroleassignament.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.userroleassignament.domain.event.UserRoleAssignamentCreateEvent;
import net.civeira.phylax.features.access.userroleassignament.domain.event.UserRoleAssignamentDeleteEvent;
import net.civeira.phylax.features.access.userroleassignament.domain.event.UserRoleAssignamentEvent;
import net.civeira.phylax.features.access.userroleassignament.domain.event.UserRoleAssignamentUpdateEvent;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.RelyingPartyVO;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.RolesVO;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.TrustedClientVO;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.userroleassignament.domain.valueobject.VersionVO;

/**
 * user-role-assignament
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class UserRoleAssignament implements UserRoleAssignamentRef {

  /**
   * Prepare a new user role assignament with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new user role assignament
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed user role assignament.
   */
  public static UserRoleAssignament create(final UserRoleAssignamentChangeSet change)
      throws ConstraintException {
    UserRoleAssignament instance = new UserRoleAssignament(change, Optional.empty());
    instance.addEvent(UserRoleAssignamentCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<UserRoleAssignamentEvent> recordedEvents = List.of();

  /**
   * El relying party de user role assignament
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RelyingPartyVO relyingPartyValue = RelyingPartyVO.nullValue();

  /**
   * El roles de user role assignament
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RolesVO rolesValue;

  /**
   * El trusted client de user role assignament
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TrustedClientVO trustedClientValue = TrustedClientVO.nullValue();

  /**
   * El identificador de la aplicacion
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user de user role assignament
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de user role assignament para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private UserRoleAssignament(final UserRoleAssignamentChangeSet attribute,
      final Optional<UserRoleAssignament> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.relyingPartyValue = attribute.readRelyingParty(previous, list);
    this.trustedClientValue = attribute.readTrustedClient(previous, list);
    this.rolesValue = attribute.readRoles(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on UserRoleAssignament", list);
    }
    this.recordedEvents = previous.map(UserRoleAssignament::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a user role assignament
   *
   * @autogenerated EntityGenerator
   * @return A instance of user role assignament ready to be deleted
   */
  public UserRoleAssignament delete() {
    UserRoleAssignament instance =
        new UserRoleAssignament(new UserRoleAssignamentChangeSet(), Optional.of(this));
    instance.addEvent(UserRoleAssignamentDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(6);
    uidToMap(map);
    userToMap(map);
    relyingPartyToMap(map);
    trustedClientToMap(map);
    rolesToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a user role assignament
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of user role assignament
   */
  public UserRoleAssignament update(final UserRoleAssignamentChangeSet change)
      throws ConstraintException {
    UserRoleAssignament instance = new UserRoleAssignament(change, Optional.of(this));
    instance.addEvent(UserRoleAssignamentUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public UserRoleAssignament withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final UserRoleAssignamentEvent event) {
    List<UserRoleAssignamentEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
