' @autogenerated
@startuml
left to right direction
title Clases para user role assignament
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
emailVerified:boolean
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
verifyEmail()
}
class access.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.TrustedClient{
uid:string
code:string
allowAllScopes:boolean
publicAllow:boolean
secretOauth:string
isResourceServer:boolean
requirePkce:boolean
backChannelLogoutUri:string
backChannelLogoutSessionRequired:boolean
frontChannelLogoutUri:string
frontChannelLogoutSessionRequired:boolean
enabled:boolean
registrationAccess:string
clientName:string
logoUri:string
clientUri:string
policyUri:string
tosUri:string
tokenEndpointAuthMethod:string
grantTypesJson:blob
responseTypesJson:blob
dynamicallyRegistered:boolean
registeredAt:datetime
allowedScopesM2m:blob
m2mTokenTtlSeconds:integer
requestObjectSigningAlg:string
jwksUri:blob
jwksJson:blob
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.UserRoleAssignamentRole{
uid:string
version:integer
}
class access.UserRoleAssignament{
uid:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.UserRoleAssignament: user
access.RelyingParty "1"  o--  "N*" access.UserRoleAssignament: relyingParty
access.TrustedClient "1"  o--  "N*" access.UserRoleAssignament: trustedClient
access.UserRoleAssignamentRole "N*"  o--  "1" access.UserRoleAssignament: roles

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
